# FactoryPlanningV2

./: .clang-format  .clang-tidy  .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  check.sh  cycle_detector.py  dataset_table.xlsx  dataset_table_20_20.csv  dataset_table_20_25.csv  dataset_table_20_40.csv  dataset_table_20_70.csv  dataset_table_35_20.csv  dataset_table_35_25.csv  dataset_table_35_40.csv  dataset_table_35_70.csv  dataset_table_45_20.csv  dataset_table_45_25.csv  dataset_table_45_40.csv  dataset_table_45_70.csv  dataset_table_50_20.csv  dataset_table_50_25.csv  dataset_table_50_40.csv  dataset_table_50_70.csv  hello_from_new_pc.txt  neural_network.ipynb  plan.txt  statistic.ipynb
include/: dataset.h  defines.h  gangsta_multistep.h  generator.h  multistep_different_sorters.h  multistep_solver.h  operation.h  operationFront.h  printer.h  problem_data.h  scorer.h  solution_checker.h  solver.h  sorters.h  time_interval.h  tool.h  work.h
include/basics/: operation.h  problem_data.h  time_interval.h  tool.h  work.h
include/scorers/: scorer.h
include/solvers/: multistep_solver.h  solution_checker.h  solver.h  sorters.h  sorters2.h
include/utils/: basic_generator.h  concurent_grid.h  count_set.h  dataset.h  generator.h  printer.h
samples/: CMakeLists.txt  change_tree.cpp  concurent_grid.cpp  dataset_creation.cpp  multistep.cpp  sample.cpp  schedule.json  statistic_calculation.cpp  visual.cpp
src/: dataset.cpp  generator.cpp  main.cpp  operation.cpp  printer.cpp  problem_data.cpp  scorer.cpp  solution_checker.cpp  solver.cpp  time_interval.cpp  tool.cpp  work.cpp
test_data/: test.txt  test_out.txt
tests/: CMakeLists.txt  test_operation.cpp  test_tool.cpp
visualization/: gantt.html  graph_visualisation.py  requirements.txt  script.js  solution.json  visual.py
